fix on mobile for sign in text
Bug Fix

--- a/wp-content/themes/ic/css/media.css
+++ b/wp-content/themes/ic/css/media.css
@@ -1951,6 +1951,11 @@ and (max-width : 640px)
 	    box-sizing: border-box;
     }
 
+    .postal-signin {
+    	padding-left: 35%;
+    	bottom: 12px;
+    }
+
     .btn--circle {
     	position: relative;
     	display: inline-block;
